# projectkit

./: .dockerignore  .env.default  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.dist.yml  alembic.ini  docker-compose.yml  gitleaks.toml  main.py  pyproject.toml  rxconfig.py
.devcontainer/: .p10k.zsh  .zshrc  Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/: copilot-instructions.md
.github/instructions/: github-actions-ci-cd-best-practices.instructions.md  python.instructions.md
.github/prompts/: boost.prompt.md  create-agentsmd.prompt.md  multi-stage-dockerfile.prompt.md
alembic/: env.py
alembic/versions/: 2025_12_30_appkit_user_0.10.0.py
app/: __init__.py  app.py  configuration.py  roles.py  styles.py
app/components/: navbar.py  navbar_component.py
app/pages/: users.py
assets/css/: _styles.css  appkit.css
assets/js/: bottom_scroll.js  mermaid_zoom.js
configuration/: config.devcontainer.yaml  config.docker_test.yaml  config.local.yaml  config.yaml  logging.prod.yaml  logging.yaml
